wx-core/include/generated/ffi_p.h

// CLASS: wxPreferencesEditor
void wxPreferencesEditor_delete(wxPreferencesEditor *self);
wxPreferencesEditor *wxPreferencesEditor_new(const wxString * title);
void wxPreferencesEditor_AddPage(wxPreferencesEditor * self, wxPreferencesPage * page);
void wxPreferencesEditor_Show(wxPreferencesEditor * self, wxWindow * parent);
void wxPreferencesEditor_Dismiss(wxPreferencesEditor * self);
bool wxPreferencesEditor_ShouldApplyChangesImmediately();
bool wxPreferencesEditor_ShownModally();
// CLASS: wxPreferencesPage
void wxPreferencesPage_delete(wxPreferencesPage *self);
wxPreferencesPage *wxPreferencesPage_new();
wxString *wxPreferencesPage_GetName(const wxPreferencesPage * self);
wxBitmapBundle *wxPreferencesPage_GetIcon(const wxPreferencesPage * self);
wxBitmap *wxPreferencesPage_GetLargeIcon(const wxPreferencesPage * self);
wxWindow * wxPreferencesPage_CreateWindow(wxPreferencesPage * self, wxWindow * parent);
// CLASS: wxPropertySheetDialog
wxClassInfo *wxPropertySheetDialog_CLASSINFO();
wxPropertySheetDialog *wxPropertySheetDialog_new();
wxPropertySheetDialog *wxPropertySheetDialog_new1(wxWindow * parent, wxWindowID id, const wxString * title, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
void wxPropertySheetDialog_AddBookCtrl(wxPropertySheetDialog * self, wxSizer * sizer);
bool wxPropertySheetDialog_Create(wxPropertySheetDialog * self, wxWindow * parent, wxWindowID id, const wxString * title, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
wxBookCtrlBase * wxPropertySheetDialog_CreateBookCtrl(wxPropertySheetDialog * self);
void wxPropertySheetDialog_CreateButtons(wxPropertySheetDialog * self, int flags);
wxBookCtrlBase * wxPropertySheetDialog_GetBookCtrl(const wxPropertySheetDialog * self);
wxSizer * wxPropertySheetDialog_GetInnerSizer(const wxPropertySheetDialog * self);
void wxPropertySheetDialog_SetInnerSizer(wxPropertySheetDialog * self, wxSizer * sizer);
long wxPropertySheetDialog_GetSheetStyle(const wxPropertySheetDialog * self);
void wxPropertySheetDialog_LayoutDialog(wxPropertySheetDialog * self, int centre_flags);
void wxPropertySheetDialog_SetBookCtrl(wxPropertySheetDialog * self, wxBookCtrlBase * book_ctrl);
void wxPropertySheetDialog_SetSheetStyle(wxPropertySheetDialog * self, long style);
void wxPropertySheetDialog_SetSheetOuterBorder(wxPropertySheetDialog * self, int border);
int wxPropertySheetDialog_GetSheetOuterBorder(const wxPropertySheetDialog * self);
void wxPropertySheetDialog_SetSheetInnerBorder(wxPropertySheetDialog * self, int border);
int wxPropertySheetDialog_GetSheetInnerBorder(const wxPropertySheetDialog * self);