wx-core/src/generated/ffi_p.rs


    // wxPreferencesEditor
    pub fn wxPreferencesEditor_delete(self_: *mut c_void);
    pub fn wxPreferencesEditor_new(title: *const c_void) -> *mut c_void;
    // DTOR: pub fn wxPreferencesEditor_~wxPreferencesEditor(self_: *mut c_void);
    pub fn wxPreferencesEditor_AddPage(self_: *mut c_void, page: *mut c_void);
    pub fn wxPreferencesEditor_Show(self_: *mut c_void, parent: *mut c_void);
    pub fn wxPreferencesEditor_Dismiss(self_: *mut c_void);
    pub fn wxPreferencesEditor_ShouldApplyChangesImmediately() -> bool;
    pub fn wxPreferencesEditor_ShownModally() -> bool;

    // wxPreferencesPage
    pub fn wxPreferencesPage_delete(self_: *mut c_void);
    // BLOCKED: pub fn wxPreferencesPage_new() -> *mut c_void;
    // DTOR: pub fn wxPreferencesPage_~wxPreferencesPage(self_: *mut c_void);
    pub fn wxPreferencesPage_GetName(self_: *const c_void) -> *mut c_void;
    pub fn wxPreferencesPage_GetIcon(self_: *const c_void) -> *mut c_void;
    pub fn wxPreferencesPage_GetLargeIcon(self_: *const c_void) -> *mut c_void;
    pub fn wxPreferencesPage_CreateWindow(self_: *mut c_void, parent: *mut c_void) -> *mut c_void;

    // wxPropertySheetDialog
    pub fn wxPropertySheetDialog_CLASSINFO() -> *mut c_void;
    pub fn wxPropertySheetDialog_new() -> *mut c_void;
    pub fn wxPropertySheetDialog_new1(
        parent: *mut c_void,
        id: c_int,
        title: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> *mut c_void;
    pub fn wxPropertySheetDialog_AddBookCtrl(self_: *mut c_void, sizer: *mut c_void);
    pub fn wxPropertySheetDialog_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        title: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> bool;
    pub fn wxPropertySheetDialog_CreateBookCtrl(self_: *mut c_void) -> *mut c_void;
    pub fn wxPropertySheetDialog_CreateButtons(self_: *mut c_void, flags: c_int);
    pub fn wxPropertySheetDialog_GetBookCtrl(self_: *const c_void) -> *mut c_void;
    pub fn wxPropertySheetDialog_GetInnerSizer(self_: *const c_void) -> *mut c_void;
    pub fn wxPropertySheetDialog_SetInnerSizer(self_: *mut c_void, sizer: *mut c_void);
    pub fn wxPropertySheetDialog_GetSheetStyle(self_: *const c_void) -> c_long;
    pub fn wxPropertySheetDialog_LayoutDialog(self_: *mut c_void, centre_flags: c_int);
    pub fn wxPropertySheetDialog_SetBookCtrl(self_: *mut c_void, book_ctrl: *mut c_void);
    pub fn wxPropertySheetDialog_SetSheetStyle(self_: *mut c_void, style: c_long);
    pub fn wxPropertySheetDialog_SetSheetOuterBorder(self_: *mut c_void, border: c_int);
    pub fn wxPropertySheetDialog_GetSheetOuterBorder(self_: *const c_void) -> c_int;
    pub fn wxPropertySheetDialog_SetSheetInnerBorder(self_: *mut c_void, border: c_int);
    pub fn wxPropertySheetDialog_GetSheetInnerBorder(self_: *const c_void) -> c_int;

}
